2012-06-07  Kirit Saelensminde  <kirit@felspar.com>
 The mock client model method `get` now returns an instance proxy as it should (when it can). If there isn't enough information to build a proper instance URL then it will continue to return the mock instance directly.

2012-06-05  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that if a URL is used in a query directly it is properly converted to a Slumber URL as appropriate.

2012-05-31  Kirit Saelensminde  <kirit@felspar.com>
 The mock client now uses the same model type constructor as the real client. This means that proxies are properly applied.
 The mock `get` method now tries to convert both values to unicode and if they compare then it will accept that. This avoids a problem where strings wouldn't compare properly with numbers.
 When instances are fetched from a remote service the mock client is checked first to see if it is already holding the instance. If it is then it is used.
 Added a new `mock_ua` test decorator that can be used to set expectations for the user agent so that proxies (and other communication with the Slumber user agent) can be much more easily tested.
 Allow `slumber.connector.api.get_instance` to take Slumber scheme URLs for both the model and the instance to make instances easier to pass between services and in tests.

2012-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Changed the type name for the instance type so we no longer need to do any model look ups to calculate the name.

2012-05-24  Kirit Saelensminde  <kirit@felspar.com>
 Optimised the solution to application of the client proxies to delay as long as possible HTTP requests. Many uses of remote instances no longer trigger any HTTP requests at all.

2012-05-23  Kirit Saelensminde  <kirit@felspar.com>